# forty-two

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  i18n_makemessages.sh  main.py  playground.py  pyproject.toml  requirements.txt  sql_playground.py
alembic/: env.py
alembic/versions/: 6029f38129d1_message_is_ask_another_ai.py  6a39c72b551c_message_is_error.py  79216c5bd924_message_provider.py  7b42c7ba9464_initial.py  a39a20974c73_user_provider.py  b212cf91d0da_message_parent_message_id.py
fortytwo/: i18n.py  logger.py  manager.py  settings.py  tg.py  types.py  user.py
fortytwo/database/: __init__.py  models.py  utils.py
fortytwo/providers/: __init__.py  anthropic.py  anthropic_types.py  base.py  deepseek.py  exceptions.py  gemini.py  gemini_types.py  openai.py  openai_types.py  openrouter.py  types.py
locales/: fortytwo.pot
locales/ca/LC_MESSAGES/: fortytwo.mo  fortytwo.po
locales/en/LC_MESSAGES/: fortytwo.mo  fortytwo.po
locales/es/LC_MESSAGES/: fortytwo.mo  fortytwo.po
locales/ru/LC_MESSAGES/: fortytwo.mo  fortytwo.po
